# tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md
include/: ColRowIndexExceededWorldException.h  GameFinishException.h  SettingNonEmptyCellException.h  TicTacToe.h  declares.h
src/: CMakeLists.txt  ColRowIndexExceededWorldException.cpp  GameFinishException.cpp  SettingNonEmptyCellException.cpp  TicTacToe.cpp  declares.cpp
test/: CMakeLists.txt
test/src/: TicTacToe_test.cpp
